--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,35 @@
 /* VARIABLES */
 
 :root{
-  /* --main-text-color : #fff; */
+  --yellow-color : #FCB72B;
+  --dark-navy-color : #495567;
+  --dim-gray-color : #939CAA;
+  --light-gray-color : #E5ECF4;
+  --snow-color : #F2F5F9;
+  --light-yellow-color : #FFF4DF;
+  --white-color: #fff;
   /* --main-bg-color : #fff; */
   /* --main-font-size : 16px; */
-  /* --main-font-weight : 400; */
+  --main-font-weight : 700;
   /* --main-line-height : 1.5; */
+}
+
+/* space-mono-700 - latin */
+@font-face {
+  font-family: "Space Mono";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/space-mono-v11-latin-700.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url("../fonts/space-mono-v11-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* lexend-deca-regular - latin */
+@font-face {
+  font-family: "Lexend Deca";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/lexend-deca-v16-latin-regular.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url("../fonts/lexend-deca-v16-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 /* GENERAL */
@@ -27,9 +51,9 @@ body{
   height: 100%;
   margin: 0;
   padding: 0;
-  /* font-family: "Roboto", "Arial", sans-serif; */
+  font-family: "Lexend Deca", "Arial", sans-serif;
   /* font-size: 16px; */
-  /* font-weight: 400; */
+  font-weight: 400;
   /* line-height: var(--main-line-height); */
 }
 
@@ -50,7 +74,7 @@ body{
 /* CONTAINER */
 
 .container{
-  /* max-width: your-size-here; */
+  max-width: 1150px;
   margin-right: auto;
   margin-left: auto;
   padding-right: 20px;
@@ -61,5 +85,21 @@ body{
 .site-main{
   flex-grow: 1;
 }
+
+/* header start */
+
+/* header finish */
+
+/* home page start */
+
+/* home page finish */
+
+/* about page start */
+
+/* about page finish */
+
+/* footer start */
+
+/* footer finish */
 
 
