About page done

--- a/css/main.css
+++ b/css/main.css
@@ -19,15 +19,15 @@
   font-family: "Space Mono";
   font-style: normal;
   font-weight: 700;
-
+  
   src: url("../fonts/space-mono-v11-latin-700.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */
   url("../fonts/space-mono-v11-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-
+  
   src: url("../fonts/space-mono-v11-latin-700.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url("../fonts/space-mono-v11-latin-700.woff") format("woff");
+  /* Chrome 26+, Opera 23+, Firefox 39+ */
+  url("../fonts/space-mono-v11-latin-700.woff") format("woff");
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-
+  
 }
 
 /* lexend-deca-regular - latin */
@@ -35,15 +35,15 @@
   font-family: "Lexend Deca";
   font-style: normal;
   font-weight: 400;
-
+  
   src: url("../fonts/lexend-deca-v16-latin-regular.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */
   url("../fonts/lexend-deca-v16-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-
+  
   src: url("../fonts/lexend-deca-v16-latin-regular.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url("../fonts/lexend-deca-v16-latin-regular.woff") format("woff");
+  /* Chrome 26+, Opera 23+, Firefox 39+ */
+  url("../fonts/lexend-deca-v16-latin-regular.woff") format("woff");
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-
+  
 }
 
 /* GENERAL */
@@ -67,6 +67,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Lexend Deca", "Arial", sans-serif;
+  overflow-x: hidden;
   /* font-size: 16px; */
   font-weight: 400;
   /* line-height: var(--main-line-height); */
@@ -116,7 +117,7 @@ body {
 }
 
 .site-logo__img{
-color: #495567;
+  color: #495567;
 }
 
 .sitenav__list {
@@ -135,7 +136,7 @@ color: #495567;
 }
 
 .sitenav__link{
-font-family: "Space Mono";
+  font-family: "Space Mono";
   font-weight: var(--main-font-weight);
   font-size: 15px;
   line-height: 25px;
@@ -145,16 +146,16 @@ font-family: "Space Mono";
 
 .header-inner__link{
   margin-left: auto;
-padding: 14px 39px;
-font-family: 'Space Mono';
-font-weight:var(--main-font-weight);
-font-size: 15px;
-line-height: 25px;
-text-align: center;
-color: var(--white-color);
-background-color: var(--yellow-color);
-text-decoration: none;
-border: 3px solid transparent;
+  padding: 14px 39px;
+  font-family: 'Space Mono';
+  font-weight:var(--main-font-weight);
+  font-size: 15px;
+  line-height: 25px;
+  text-align: center;
+  color: var(--white-color);
+  background-color: var(--yellow-color);
+  text-decoration: none;
+  border: 3px solid transparent;
 }
 
 .header-inner__link:hover{
@@ -170,7 +171,265 @@ border: 3px solid transparent;
 /* home page finish */
 
 /* about page start */
+.hero-about__top{
+  padding-top: 62px;
+  padding-bottom: 82px;
+  background-image: url(../images/about-bg.jpg);
+}
+.hero-about__toptext{
+  margin: 0;
+  font-family: 'Space Mono';
+  font-weight: var(--main-font-weight);
+  font-size: 56px;
+  line-height: 56px;
+  letter-spacing: -2.5px;
+  color: var(--white-color);
+}
+.hero-about__box{
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.hero-about__list{
+  margin: 0;
+  padding: 0;
+  
+  list-style: none;
+}
+.hero-about__item{
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-bottom: 120px;
+}
+.hero-about__textbox{
+  width: 445px;
+}
+.hero-about__theme{
+  margin: 0;
+  margin-bottom: 24px;
+  font-family: 'Space Mono';
+  font-weight: var(--main-font-weight);
+  font-size: 48px;
+  line-height: 48px;
+  letter-spacing: -2.14286px;
+  color: var(--dark-navy-color);
+}
+.hero-about__info{
+  margin: 0;
+  font-size: 15px;
+  line-height: 25px;
+  color: var(--dim-gray-color);
+}
+.hero-about__img{
+  position: relative;
+  width: 445px;
+  height: 445px;
+  margin-left: auto;
+  border-radius: 50%;
+  background-image: url(../images/mobility.jpg);
+  background-color: var(--dim-gray-color);
+}
+.hero-about__img::after{
+  position: absolute;
+  top: 267px;
+  right: -173px; 
+  z-index: 2; 
+  content: "";
+  display: block;
+  background-image: url(../images/mobility-strelka.svg);
+  background-repeat: no-repeat;
+  width: 734px;
+  height: 300px;
+  background-size: contain;
+}
+.hero-about__img--better{
+  margin-right: 220px;
+  background-image: url(../images/better-urban.jpg);
+}
+.hero-about__img--better::after{
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: -122%;
+  z-index: 2; 
+  content: "";
+  display: block;
+  background-image: url(../images/better-urban-strelka.svg);
+  background-repeat: no-repeat;
+  width: 734px;
+  height: 300px;
+  background-size: contain;
+}
+.hero-about__item:first-child::after{
+  position: absolute;
+  top: 0;
+  right: -480px;
+  content: "";
+  display: block;
+  background-image: url(../images/mobility-circle.svg);
+  width: 445px;
+  height: 445px;
+}
+.hero-about__item:last-child::after{
+  position: absolute;
+  top: 0;
+  left: -480px;
+  content: "";
+  display: block;
+  background-image: url(../images/mobility-circle.svg);
+  width: 445px;
+  height: 445px;
+}
+.our-values{
+  padding-bottom: 120px;
+}
+.our-values__theme{
+  margin: 0;
+  margin-bottom: 85px;
+  font-family: 'Space Mono';
+  font-weight: var(--main-font-weight);
+  font-size: 48px;
+  line-height: 48px;
+  text-align: center;
+  letter-spacing: -2.14286px;
+  color: var(--dark-navy-color);
+}
+.our-values__list{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.our-values__item{
+  width: 350px;
+}
+.our-values__imgbg{
+  position: relative;
+  width: 240px;
+  height: 240px;
+  margin-bottom: 87px;
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
+  border-radius: 50%;
+  background-image: url(../images/our-tech.jpg);
+}
+.our-values__imgbg::after{
+  position: absolute;
+  bottom: -60px;
+  left: 70px;
+  content: "";
+  display: block;
+  background-image: url(../images/01.svg);
+  background-repeat: no-repeat;
+  width: 96px;
+  height: 96px;
+}
+.our-values__imgbg--integrity{
+  background-image: url(../images/our-integrity.jpg);
+}
+.our-values__imgbg--integrity::after{
+  background-image: url(../images/02.svg);
+}
+.our-values__imgbg--community{
+  background-image: url(../images/our-community.jpg);
+}
+.our-values__imgbg--community::after{
+  background-image: url(../images/03.svg);
+}
+.our-values__minitheme{
+  margin: 0;
+  margin-bottom: 27px;
+  font-family: 'Space Mono';
+  font-weight: var(--main-font-weight);
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  letter-spacing: -1.07143px;
+  color: var(--dark-navy-color);
+}
+.our-values__text{
+  margin: 0;
+  font-size: 15px;
+  line-height: 25px;
+  text-align: center;
+  color: var(--dim-gray-color);
+}
+.faq{
+  padding-bottom: 160px;
+}
+.faq__theme{
+  margin: 0;
+  margin-bottom: 64px;
+  font-family: 'Space Mono';
+  font-weight: var(--main-font-weight);
+  font-size: 48px;
+  line-height: 48px;
+  text-align: center;
+  letter-spacing: -2.14286px;
+  color: var(--dark-navy-color);
+}
+.faq__how{
+  display: flex;
+  justify-content: space-between;
+}
+.faq__minitheme{
+  margin: 0;
+  font-family: 'Space Mono';
+  font-weight: var(--main-font-weight);
+  font-size: 40px;
+  line-height: 48px;
+  letter-spacing: -1.78571px;
+  color: var(--dark-navy-color);
+}
+.faq__list{
+  width: 730px;
+  margin-bottom: 16px;
+  padding: 32px 40px;
+  background-color: #f2f5f9;
+}
+.faq__list:hover{
+  background-color: #fff4df;
+}
 
+.faq__item{
+  position: relative;
+  margin-bottom: 24px;
+  font-family: 'Space Mono';
+  font-weight: var(--main-font-weight);
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: -1.07143px;
+  color: var(--dark-navy-color);
+  list-style: none;
+}
+.faq__item::after{
+  position: absolute;
+  top: 10px;
+  right: 0;
+  content: "";
+  display: inline-block;
+  background-image: url(../images/down-icon.svg);
+  background-repeat: no-repeat;
+  width: 16px;
+  height: 10px;
+  background-size: cover;
+}
+.faq__list[open] .faq__item::after{
+ transform: rotate(180deg);
+ transition: 0.5s;
+}
+.faq__minitext{
+  margin: 0;
+  font-size: 15px;
+  line-height: 25px;
+  color: var(--dark-navy-color);
+}
+.faq__minibox{
+  width: 650px;
+}
 /* about page finish */
 
 /* footer start */
