--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,10 @@
   font-style: normal;
   font-weight: 700;
 
-  src: url("../fonts/space-mono-v11-latin-700.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */
-  url("../fonts/space-mono-v11-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: url("../fonts/space-mono-v11-latin-700.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+    url("../fonts/space-mono-v11-latin-700.woff") format("woff");
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 
   src: url("../fonts/space-mono-v11-latin-700.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
@@ -36,8 +38,10 @@
   font-style: normal;
   font-weight: 400;
 
-  src: url("../fonts/lexend-deca-v16-latin-regular.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */
-  url("../fonts/lexend-deca-v16-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: url("../fonts/lexend-deca-v16-latin-regular.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+    url("../fonts/lexend-deca-v16-latin-regular.woff") format("woff");
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 
   src: url("../fonts/lexend-deca-v16-latin-regular.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
@@ -115,8 +119,8 @@ body {
   margin-right: 58px;
 }
 
-.site-logo__img{
-color: #495567;
+.site-logo__img {
+  color: #495567;
 }
 
 .sitenav__list {
@@ -134,8 +138,8 @@ color: #495567;
   margin-right: 0;
 }
 
-.sitenav__link{
-font-family: "Space Mono";
+.sitenav__link {
+  font-family: "Space Mono";
   font-weight: var(--main-font-weight);
   font-size: 15px;
   line-height: 25px;
@@ -143,21 +147,22 @@ font-family: "Space Mono";
   text-decoration: none;
 }
 
-.header-inner__link{
+.header-inner__link {
   margin-left: auto;
-padding: 14px 39px;
-font-family: 'Space Mono';
-font-weight:var(--main-font-weight);
-font-size: 15px;
-line-height: 25px;
-text-align: center;
-color: var(--white-color);
-background-color: var(--yellow-color);
-text-decoration: none;
-border: 3px solid transparent;
+  padding: 14px 39px;
+  font-family: 'Space Mono';
+  font-weight: var(--main-font-weight);
+  font-size: 15px;
+  line-height: 25px;
+  text-align: center;
+  color: var(--white-color);
+  background-color: var(--yellow-color);
+  text-decoration: none;
+  border: 3px solid transparent;
+  transition: 0.4s ease;
 }
 
-.header-inner__link:hover{
+.header-inner__link:hover {
   color: var(--yellow-color);
   background-color: var(--white-color);
   border: 3px solid #FCB72B;
@@ -167,6 +172,381 @@ border: 3px solid transparent;
 
 /* home page start */
 
+/* hero section start  */
+
+.hero {
+  padding: 153px 0;
+  background-image: url("../images/home-hero-bgimg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+
+}
+
+
+
+.hero__box {
+  width: 500px;
+  position: relative;
+}
+
+.hero__box::after {
+  content: "";
+  background-image: url("../images/hero-after-img.svg");
+  background-size: contain;
+  width: 234px;
+  height: 62px;
+  position: absolute;
+  bottom: calc(50% + -170px);
+  right: calc(5% + -845px);
+}
+
+.hero__title {
+  margin: 0;
+  margin-bottom: 40px;
+  font-family: 'Space Mono';
+  font-weight: var(--main-font-weight);
+  font-size: 56px;
+  line-height: 56px;
+  letter-spacing: -2.5px;
+  color: var(--white-color);
+}
+
+.hero__text-box {
+  width: 405px;
+  margin-left: auto;
+  position: relative;
+}
+
+.hero__text-box::before {
+  content: "";
+  background-image: url("../images/home-hero-before.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 203px;
+  height: 15px;
+  position: absolute;
+  top: 47px;
+  left: -266px;
+}
+
+.hero__text-box::after {
+  display: block;
+  content: "";
+  background-image: url("../images/home-icon-right-hero.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 500px;
+  height: 138px;
+  position: absolute;
+  top: 47px;
+  right: -571px;
+}
+
+.hero__text {
+  margin: 0;
+  margin-bottom: 40px;
+  font-family: 'Lexend Deca';
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  color: var(--white-color);
+}
+
+.hero__link {
+  padding: 14px 39px;
+  font-family: 'Space Mono';
+  font-weight: var(--main-font-weight);
+  font-size: 15px;
+  line-height: 25px;
+  text-align: center;
+  color: var(--white-color);
+  background-color: var(--yellow-color);
+  border: 3px solid transparent;
+  text-decoration: none;
+  transition: 0.4s ease;
+}
+
+.hero__link:hover {
+  color: var(--yellow-color);
+  background-color: transparent;
+  border: 3px solid #FCB72B;
+}
+
+/* hero section finish  */
+
+/* offer section start  */
+
+.offer {
+  padding-top: 160px;
+  padding-bottom: 200px;
+}
+
+
+
+.offer__list {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: relative;
+
+}
+
+.offer__item::before {
+  display: block;
+  content: "";
+  width: 974px;
+  border: 5px solid #E5ECF4;
+  z-index: -1;
+  position: absolute;
+  top: 56px;
+  right: 271px;
+  background-color: var(--light-gray-color);
+}
+
+.offer__item {
+  padding-top: 136px;
+  margin-right: 30px;
+  position: relative;
+}
+
+.offer__item:last-child {
+  margin-right: 0;
+}
+
+.offer__locate {
+  position: absolute;
+  bottom: 188px;
+  left: 0px;
+  width: 96px;
+  height: 96px;
+  background-image: url("../images/home-locate.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: var(--yellow-color);
+  border-radius: 50%;
+}
+
+.offer__scooter {
+  position: absolute;
+  bottom: 188px;
+  left: 0px;
+  width: 96px;
+  height: 96px;
+  background-image: url("../images/home-scooter.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: var(--yellow-color);
+  border-radius: 50%;
+}
+
+.offer__ride {
+  position: absolute;
+  bottom: 188px;
+  left: 0px;
+  width: 96px;
+  height: 96px;
+  background-image: url("../images/home-ride.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: var(--yellow-color);
+  border-radius: 50%;
+}
+
+.offer__topic {
+  margin: 0;
+  margin-bottom: 27px;
+}
+
+.offer__link {
+  font-family: 'Space Mono';
+  font-weight: var(--main-font-weight);
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: -1.07143px;
+  color: var(--dark-navy-color);
+  text-decoration: none;
+}
+
+.offer__text {
+  margin: 0;
+  font-family: 'Lexend Deca';
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  color: var(--dim-gray-color);
+}
+
+/* offer section finish  */
+
+/* info section start  */
+
+.info {
+  padding-bottom: 200px;
+}
+
+.info__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.info__item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 160px;
+  position: relative;
+}
+
+.info__item--easy::after {
+  content: "";
+  background-image: url("../images/icon-right.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 900px;
+  height: 99px;
+  position: absolute;
+  right: -377px;
+  top: 308px;
+  z-index: 1;
+}
+
+.info__item--coming::before {
+  content: "";
+  background-image: url("../images/icon-left.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 900px;
+  height: 99px;
+  position: absolute;
+  left: -338px;
+  top: 28px;
+  z-index: 1;
+}
+
+.info__item--money::before {
+  content: "";
+  background-image: url("../images/icon-right.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 900px;
+  height: 99px;
+  position: absolute;
+  right: -716px;
+  top: 111px;
+  z-index: 1;
+}
+
+.info__item:nth-child(2) {
+  flex-direction: row-reverse;
+}
+
+
+.info__item:last-child {
+  margin-bottom: 0;
+}
+
+.info__item-box {
+  width: 445px;
+}
+
+.info__topic {
+  margin: 0;
+  margin-bottom: 24px;
+}
+
+.info__link {
+  font-family: 'Space Mono';
+  font-style: normal;
+  font-weight: var(--main-font-weight);
+  font-size: 48px;
+  line-height: 48px;
+  letter-spacing: -2.14286px;
+  color: var(--dark-navy-color);
+  text-decoration: none;
+}
+
+.info__text {
+  margin: 0;
+  margin-bottom: 40px;
+  font-family: 'Lexend Deca';
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  color: var(--dim-gray-color);
+}
+
+.info__link-more {
+  padding: 14px 44px;
+  font-family: 'Space Mono';
+  font-style: normal;
+  font-weight: var(--main-font-weight);
+  font-size: 15px;
+  line-height: 25px;
+  text-align: center;
+  color: var(--white-color);
+  background-color: var(--yellow-color);
+  text-decoration: none;
+  border: 3px solid transparent;
+  transition: 0.5s ease;
+}
+
+.info__link-more:hover {
+  color: var(--yellow-color);
+  background-color: var(--white-color);
+  border: 3px solid #FCB72B;
+
+}
+
+.info__img-box {
+  position: relative;
+}
+
+.info__img-box--easy::after {
+  content: "";
+  position: absolute;
+  right: -500px;
+  top: 0px;
+  background-image: url("../images/home-img-after.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 445px;
+  height: 445px;
+}
+
+.info__img-box--coming::before {
+  content: "";
+  position: absolute;
+  left: -500px;
+  top: 0px;
+  background-image: url("../images/home-img-after.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 445px;
+  height: 445px;
+}
+
+.info__img-box--money::after {
+  content: "";
+  position: absolute;
+  right: -500px;
+  top: 0px;
+  background-image: url("../images/home-img-after.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 445px;
+  height: 445px;
+}
+
+.info__img {
+  border-radius: 50%;
+}
+
+/* info section finish  */
+
 /* home page finish */
 
 /* about page start */
@@ -174,21 +554,24 @@ border: 3px solid transparent;
 /* about page finish */
 
 /* footer start */
-.site-article{
+.site-article {
   padding: 102px 0px;
   background-color: var(--dark-navy-color);
   background-image: url(../images/footer-circle-bg.svg);
   background-repeat: no-repeat;
   background-position: calc(50% + 280px) calc(50% + 200px);
 }
-.site-article__box{
+
+.site-article__box {
   display: flex;
   align-items: center;
 }
-.site-article__textbox{
+
+.site-article__textbox {
   width: 415px;
 }
-.site-article__text{
+
+.site-article__text {
   margin: 0;
   font-family: 'Space Mono';
   font-weight: var(--main-font-weight);
@@ -197,7 +580,8 @@ border: 3px solid transparent;
   letter-spacing: -2.14286px;
   color: var(--white-color);
 }
-.site-article__list{
+
+.site-article__list {
   display: flex;
   margin: 0;
   margin-left: auto;
@@ -205,7 +589,8 @@ border: 3px solid transparent;
   align-items: center;
   list-style: none;
 }
-.site-article__item{
+
+.site-article__item {
   display: flex;
   align-items: center;
   margin-right: 18px;
@@ -213,10 +598,12 @@ border: 3px solid transparent;
   background-color: var(--light-gray-color);
   border-radius: 4px;
 }
-.site-article__item:last-child{
+
+.site-article__item:last-child {
   margin-right: 0;
 }
-.site-article__item::before{
+
+.site-article__item::before {
   content: "";
   display: inline-block;
   margin-right: 12px;
@@ -224,7 +611,8 @@ border: 3px solid transparent;
   width: 24px;
   height: 28px;
 }
-.site-article__item:last-child::before{
+
+.site-article__item:last-child::before {
   content: "";
   display: inline-block;
   margin-right: 12px;
@@ -232,10 +620,12 @@ border: 3px solid transparent;
   width: 24px;
   height: 28px;
 }
-.site-article__link{
+
+.site-article__link {
   text-decoration: none;
 }
-.site-article__linkthemetop{
+
+.site-article__linkthemetop {
   margin: 0;
   font-family: 'Space Mono';
   font-weight: var(--main-font-weight);
@@ -244,9 +634,10 @@ border: 3px solid transparent;
   letter-spacing: -0.446429px;
   color: var(--dark-navy-color);
 }
-.site-article__linkthemeunder{
+
+.site-article__linkthemeunder {
   margin: 0;
-  font-family: 'Space Mono';  
+  font-family: 'Space Mono';
   font-weight: var(--main-font-weight);
   font-size: 20px;
   line-height: 24px;
@@ -254,35 +645,40 @@ border: 3px solid transparent;
   color: var(--dark-navy-color);
 }
 
-.site-footer{
+.site-footer {
   padding-top: 35px;
   padding-bottom: 32px;
   background-color: #333a44;
 }
-.site-footer__box{
+
+.site-footer__box {
   display: flex;
   align-items: center;
 }
-.site-footer__logo{
+
+.site-footer__logo {
   margin-right: 59px;
   color: var(--white-color);
 }
 
 
-.site-footer__list{
+.site-footer__list {
   margin: 0;
   padding: 0;
   list-style: none;
   display: flex;
   align-items: center;
 }
-.site-footer__item{
+
+.site-footer__item {
   margin-right: 32px;
 }
-.site-footer__item:last-child{
+
+.site-footer__item:last-child {
   margin-right: 0;
 }
-.site-footer__link{
+
+.site-footer__link {
   text-decoration: none;
   font-family: 'Space Mono';
   font-weight: var(--main-font-weight);
@@ -290,22 +686,25 @@ border: 3px solid transparent;
   line-height: 25px;
   color: var(--dim-gray-color);
 }
-.site-footer__social{
+
+.site-footer__social {
   display: flex;
   margin: 0;
   margin-left: auto;
   padding: 0;
   list-style: none;
 }
-.site-footer__socialitem{
+
+.site-footer__socialitem {
   margin-right: 24px;
 }
-.site-footer__socialitem:last-child{
+
+.site-footer__socialitem:last-child {
   margin-right: 0;
 }
-/* footer finish */
-
-
 
 /* footer finish */
 
+
+
+/* footer finish */
